syntax = "proto3";

package proto;

option go_package = "emoLog/internal/grpc/proto;proto";

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}
service UserService {
  rpc VerifyToken(TokenRequest) returns (UserResponse);
}

message TokenRequest {
  string token = 1;
}
message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
}
message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string greeting = 1;
}
